fix: reduce page shaking while scrollbar appears

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -12,6 +12,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  margin-left: calc(100vw - 100%);
 }
 
 body::-webkit-scrollbar {
